feat: 虚拟线程优化+简易风控
- chatExecutor 改为虚拟线程，提升并发能力
- StreamService 使用虚拟线程调度器
- RabbitMQ 消费者使用虚拟线程
- 新增 RiskControlService 精细化黑名单检测
- 风控命中后中断流式输出，返回默认提示